codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Microphone
  Saved devices apply to realtime voice only.

› 1. System default (current)  Use your operating
                               system default device.
  2. Built-in Mic
  3. USB Mic

  Press enter to confirm or esc to go back
